Google Map trial and etc
Google Map trial on the footer
Add sample template for RegisterInfo, Contact

--- a/MoonLight.Umbraco/Views/Introduction.cshtml
+++ b/MoonLight.Umbraco/Views/Introduction.cshtml
@@ -14,47 +14,51 @@
         </div>
         <div class="row">
             <div class="col-md-8">
-                <div class="row">
-                    <div class="col-md-12 services-inner">
-                        <span><i class="sl-icon-graph"></i></span>
-                        <div class="desc">
-                            <h3>따뜻한 섬김</h3>
-                            <p>따뜻한 섬김이란 무엇일까 가나다라마바사</p>
-                        </div>
-                    </div>
-                    <div class="col-md-12 services-inner">
-                        <span><i class="sl-icon-heart"></i></span>
-                        <div class="desc">
-                            <h3>행복 나눔</h3>
-                            <p>행복을 나누어요. 함께해야 행복합니다. </p>
-                        </div>
-                    </div>
-                    <div class="col-md-12 services-inner">
-                        <span><i class="sl-icon-key"></i></span>
-                        <div class="desc">
-                            <h3>마음의 치료</h3>
-                            <p>마음이 건강하면 육체가 건강합니다. 공기좋고 물 좋은 대전 광역시. </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+				<div class="row">
+					<div class="col-md-12">
+						<div class="about-inner">
+						    <div class="col-md-6">
+    							<a href="#" class="featured-grid featured-grid-2" style="background-image: url(/images/image_2.jpg);">
+                                    <div class="desc">
+                                        <h3>사진 B</h3>
+                                        <span>사진 B</span>
+                                    </div>
+                                </a>
+                            </div>
+							<h3>달이의 꽃숲은</h3>
+							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<blockquote>
+								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							</blockquote>
+						</div>
+					</div>
+				</div>
+			</div>
             <div class="col-md-4">
                 <aside class="sidebar">
                     <div class="row">
                         <div class="col-md-12 side">
-                            <h3>목록</h3>
+                            <h3>달이의 꽃숲이 좋은 이유</h3>
                             <ul>
-                                <li><i class="icon-check"></i><a href="#">목록 1</a></li>
-                                <li><i class="icon-check"></i><a href="#">목록 2</a></li>
-                                <li><i class="icon-check"></i><a href="#">방 Type A</a></li>
-                                <li><i class="icon-check"></i><a href="#">방 Type B</a></li>
-                                <li><i class="icon-check"></i><a href="#">방 Type C</a></li>
-                                <li><i class="icon-check"></i><a href="#">방 Type D</a></li>
+                                <li><i class="icon-check"></i><a href="#">교통이 편리합니다.</a></li>
+                                <li><i class="icon-check"></i><a href="#">쾌적한 자연환경에 위치해 있습니다.</a></li>
+                                <li><i class="icon-check"></i><a href="#">다양한 편의 시설을 갖추고 있습니다.</a></li>
+                                <li><i class="icon-check"></i><a href="#">가족과 같은 사람들과 함께 합니다.</a></li>
+                                <li><i class="icon-check"></i><a href="#">... 가 있습니다.</a></li>
+                                <li><i class="icon-check"></i><a href="#">다양한 ...를 이용할 수 있습니다.</a></li>
                             </ul>
                         </div>
                         <div class="col-md-12 side">
-                            <h3>한 가족</h3>
-                            <p>태정태세문단세 예성연중인명선 광인효현숙경영 정순헌철고순</p>
+                            <h3>시설 개요</h3>
+                            <ul>
+                                <li><i class="icon-check"></i><a href="#">설립주최: 사회복지법인</a></li>
+                                <li><i class="icon-check"></i><a href="#">설립일: 2015년 10월 15일</a></li>
+                                <li><i class="icon-check"></i><a href="#">시설장: 문정희</a></li>
+                                <li><i class="icon-check"></i><a href="#">소재지: 충청도 대전광역시 AAA동 BBB거리</a></li>
+                                <li><i class="icon-check"></i><a href="#">건축규모 : 대지 : 11,091m2, 건물 : 지상3층 2,120m2</a></li>
+                                <li><i class="icon-check"></i><a href="#">입소 정원 : 30 가정</a></li>
+                                <li><i class="icon-check"></i><a href="#">Staff : 10 명</a></li>
+                            </ul>
                         </div>
                     </div>
                 </aside>
