--- a/MoonLight.Umbraco/Views/Master.cshtml
+++ b/MoonLight.Umbraco/Views/Master.cshtml
@@ -71,6 +71,9 @@
 <script src="/scripts/jquery.waypoints.min.js"></script>
 <!-- MAIN JS -->
 <script src="/scripts/main.js"></script>
+<!-- Google Map -->   
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDUieqLjuc9yzFY7rlgpTok8e4qNuuQqPs"></script>
+<script src="/scripts/google_map.js"></script>
 
 </body>
 </html>
