--- a/MoonLight.Umbraco/Views/RegistrationInfo.cshtml
+++ b/MoonLight.Umbraco/Views/RegistrationInfo.cshtml
@@ -3,3 +3,45 @@
 @{
 	Layout = "Master.cshtml";
 }
+
+<div class="container">
+    <div class="col-md-6">
+        <h3>입소 대상</h3>
+        <ul>
+            <li><i class="icon-check"></i>노인장기요양 등급이 3등급 또는 등급외자로서 요양시설에 가실 수 없는 분</li>
+            <li><i class="icon-check"></i>병원에서 퇴원을 했으나 요양 및 보살핌이 필요하신 분</li>
+            <li><i class="icon-check"></i>혼자 생활하기가 적적하거나, 불안하신 분</li>
+            <li><i class="icon-check"></i>해외여행등 가족의 사정으로 단기보호가 필요하신 분</li>
+            <li><i class="icon-check"></i>만60세 이상의 건강한 노인 또는 만성질환을 가지고 있는 분</li>
+        </ul>
+        
+        <h3>입소 절차</h3>
+        <ul>
+            <li><i class="icon-check"></i>입주 상담</li>
+            <li><i class="icon-check"></i>입주 심사</li>
+            <li><i class="icon-check"></i>입주 예약 (보증금의 10%)</li>
+            <li><i class="icon-check"></i>계약 및 입주 (계약서 작성, 잔금 입금)</li>
+        </ul>
+        
+        <h3>구비 서류</h3>
+        
+        <h5>입주자</h5>
+        <ul>
+            <li><i class="icon-check"></i>주민등록등본 1통, 건강진단서, 법정전염병진단서, 인감도장, 신분증</li>
+        </ul>
+        
+        <h5>보증인</h5>
+        <ul>
+            <li><i class="icon-check"></i>인감증명서, 주민등록등본 1통, 인감도장, 신분증</li>
+        </ul>
+    </div>
+
+    <div class="col-md-3">
+        <a href="#" class="featured-grid featured-grid-2" style="background-image: url(/images/image_2.jpg);">
+            <div class="desc">
+                <h3>사진 B</h3>
+                <span>사진 B</span>
+            </div>
+        </a>
+    </div>
+</div>
