--- a/MoonLight.Umbraco/Views/Contact.cshtml
+++ b/MoonLight.Umbraco/Views/Contact.cshtml
@@ -4,4 +4,48 @@
 	Layout = "Master.cshtml";
 }
 
-This is Contact.
+<div id="fh5co-contact-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
+					<h2>문의</h2>
+					<p><span>언제든지 환영해요 <i class="sl-icon-heart"></i></span></p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-3">
+					<h3>Contact Info.</h3>
+					<ul class="contact-info">
+						<li><i class="sl-icon-map"></i>달이 꽃방, 대전 광역시 가나다라</li>
+						<li><i class="sl-icon-phone"></i>+ 1235 2355 98</li>
+						<li><i class="sl-icon-envelope-open"></i><a href="#">info@달이꽃방.com</a></li>
+						<li><i class="sl-icon-globe-alt"></i><a href="#">www.달이꽃방.com</a></li>
+					</ul>
+				</div>
+				<div class="col-md-8 col-md-push-1 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
+					<div class="row">
+						<div class="col-md-6">
+							<div class="form-group">
+								<input class="form-control" placeholder="Name" type="text">
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="form-group">
+								<input class="form-control" placeholder="Email" type="text">
+							</div>
+						</div>
+						<div class="col-md-12">
+							<div class="form-group">
+								<textarea name="" class="form-control" id="" cols="30" rows="7" placeholder="Message"></textarea>
+							</div>
+						</div>
+						<div class="col-md-12">
+							<div class="form-group">
+								<input value="Send Message" class="btn btn-primary" type="submit">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
