--- a/MoonLight.Umbraco/Views/Partials/Footer.cshtml
+++ b/MoonLight.Umbraco/Views/Partials/Footer.cshtml
@@ -3,33 +3,18 @@
 	<footer id="fh5co-footer" role="contentinfo">
 	
 		<div class="container">
-			<div class="col-md-3 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
+			<div class="col-md-4 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
 				<h3>오시는 길</h3>
 				<p>우리는 대전에 있습니다. 대전광역시 진달래동 달맞이 거리 123호 (구글 지도를 여기에)</p>
 			</div>
-			<div class="col-md-6 col-md-push-1 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
-				<h3>적고 싶은 내용이 있을까요?</h3>
-				<ul class="float">
-					<li><a href="#">목록 1</a></li>
-					<li><a href="#">목록 2</a></li>
-					<li><a href="#">목록 3</a></li>
-					<li><a href="#">목록 4</a></li>
-				</ul>
-				<ul class="float">
-					<li><a href="#">목록 5</a></li>
-					<li><a href="#">목록 6</a></li>
-					<li><a href="#">목록 7</a></li>
-					<li><a href="#">목록 8</a></li>
-				</ul>
-
+			<div class="col-md-4 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
+			    <div id="map" data-animate-effect="fadeIn"></div>
 			</div>
-
-			<div class="col-md-2 col-md-push-1 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
+            
+			<div class="col-md-4 col-md-push-1 col-sm-12 col-sm-push-0 col-xs-12 col-xs-push-0">
 				<h3>함께해요</h3>
 				<ul class="fh5co-social">
-					<li><a href="#"><i class="icon-twitter"></i> Twitter</a></li>
 					<li><a href="#"><i class="icon-facebook"></i> Facebook</a></li>
-					<li><a href="#"><i class="icon-google-plus"></i> Google Plus</a></li>
 					<li><a href="#"><i class="icon-instagram"></i> Instagram</a></li>
 				</ul>
 			</div>
